SERVER-24726 readonly mode should ignore temp collections